<?xml version="1.0" encoding="UTF-8"?>
<!--
~  Copyright 2020 viswadas leher <vleher@gmail.com>.
~
~  Licensed under the Apache License, Version 2.0 (the "License");
~  you may not use this file except in compliance with the License.
~  You may obtain a copy of the License at
~
~       http://www.apache.org/licenses/LICENSE-2.0
~
~  Unless required by applicable law or agreed to in writing, software
~  distributed under the License is distributed on an "AS IS" BASIS,
~  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
~  See the License for the specific language governing permissions and
~  limitations under the License.
~
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.dydabo</groupId>
  <artifactId>DynamicDataBlackBox</artifactId>
  <version>1.0.0</version>
  <packaging>pom</packaging>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
  </properties>

  <modules>
    <module>dydabo-core</module>
<!--    <module>dydabo-cassandra</module>
    <module>dydabo-hbase</module>
    <module>dydabo-mongodb</module> -->
    <module>dydabo-redis</module>
    <module>dydabo-test</module>
  </modules>

  <dependencyManagement>
    <dependencies>
      <dependency>
	<groupId>com.google.code.gson</groupId>
	<artifactId>gson</artifactId>
	<version>2.9.1</version>
      </dependency>

      <dependency>
	<groupId>org.apache.logging.log4j</groupId>
	<artifactId>log4j-core</artifactId>
	<version>2.19.0</version>
      </dependency>
      <dependency>
	<groupId>org.apache.logging.log4j</groupId>
	<artifactId>log4j-api</artifactId>
	<version>2.19.0</version>
      </dependency>
      <dependency>
	<groupId>org.junit.jupiter</groupId>
	<artifactId>junit-jupiter-api</artifactId>
	<version>5.9.1</version>
	<scope>test</scope>
      </dependency>
      <dependency>
	<groupId>org.junit.jupiter</groupId>
	<artifactId>junit-jupiter-params</artifactId>
	<version>5.9.1</version>
	<scope>test</scope>
      </dependency>
      <dependency>
	<groupId>org.junit.jupiter</groupId>
	<artifactId>junit-platform-engine</artifactId>
	<version>5.9.1</version>
	<scope>test</scope>
      </dependency>
      <dependency>
	<groupId>org.mockito</groupId>
	<artifactId>mockito-junit-jupiter</artifactId>
	<version>4.8.1</version>
	<scope>test</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
	<plugin>
	  <groupId>org.apache.maven.plugins</groupId>
	  <artifactId>maven-enforcer-plugin</artifactId>
	  <version>3.1.0</version>
	  <executions>
	    <execution>
	      <id>enforce-versions</id>
	      <goals>
		<goal>enforce</goal>
	      </goals>
	      <configuration>
		<rules>
		  <requireMavenVersion>
		    <version>3.8.6</version>
		  </requireMavenVersion>
		  <requireJavaVersion>
		    <version>17</version>
		  </requireJavaVersion>
		  <requireOS>
		    <family>unix</family>
		  </requireOS>
		</rules>
	      </configuration>
	    </execution>
	  </executions>
	</plugin>
	<plugin>
	  <groupId>org.apache.maven.plugins</groupId>
	  <artifactId>maven-surefire-plugin</artifactId>
	  <version>3.0.0-M7</version>
	</plugin>
      </plugins>
    </pluginManagement>
  </build>
</project>
